--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <meta charset="utf-8" /> 
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>PROJET 2</title> 
-<link rel="stylesheet" href="PROJET 2 VRAI.css"/>
+<link rel="stylesheet" href="style.css"/>
 </head> 
 
 <body>
@@ -57,3 +57,4 @@ repellendus obcaecati atque quibusdam non!</p>
 
 </body> 
 </html> 
+
